add workload annotation

--- a/pyecharts/index.html
+++ b/pyecharts/index.html
@@ -966,13 +966,13 @@ radiusToData:a.prototype.coordToData},o.inherits(n,a),t.exports=n},function(t,e,
 </head>
 
 <body>
-<div id="e19d217390b145e687977564d9d441dc" style="width:800px;height:400px;"></div>
+<div id="8a9945faf7d1419baa593244b92fa749" style="width:800px;height:400px;"></div>
 <script type="text/javascript">
-    var myChart_e19d217390b145e687977564d9d441dc = echarts.init(document.getElementById('e19d217390b145e687977564d9d441dc'));
-    var option_e19d217390b145e687977564d9d441dc = {
+    var myChart_8a9945faf7d1419baa593244b92fa749 = echarts.init(document.getElementById('8a9945faf7d1419baa593244b92fa749'));
+    var option_8a9945faf7d1419baa593244b92fa749 = {
     "title": [
         {
-            "text": "opr_count graph",
+            "text": "workloada\ntype :opr_count",
             "subtext": "2020-03-30",
             "left": "auto",
             "top": "auto",
@@ -997,7 +997,7 @@ radiusToData:a.prototype.coordToData},o.inherits(n,a),t.exports=n},function(t,e,
             }
         }
     },
-    "_index_flag": 1024891,
+    "_index_flag": 1994911,
     "tooltip": {},
     "series": [
         {
@@ -1040,7 +1040,7 @@ radiusToData:a.prototype.coordToData},o.inherits(n,a),t.exports=n},function(t,e,
             "markLine": {
                 "data": []
             },
-            "indexflag": 1024891
+            "indexflag": 1994911
         }
     ],
     "legend": [
@@ -1121,15 +1121,15 @@ radiusToData:a.prototype.coordToData},o.inherits(n,a),t.exports=n},function(t,e,
         "#f6f5ec"
     ]
 };
-    myChart_e19d217390b145e687977564d9d441dc.setOption(option_e19d217390b145e687977564d9d441dc);
+    myChart_8a9945faf7d1419baa593244b92fa749.setOption(option_8a9945faf7d1419baa593244b92fa749);
 </script>
-<div id="4a1bdcd0e4d24905952176271494e981" style="width:800px;height:400px;"></div>
+<div id="9fcf29e3679949acaf400c485bf1c6be" style="width:800px;height:400px;"></div>
 <script type="text/javascript">
-    var myChart_4a1bdcd0e4d24905952176271494e981 = echarts.init(document.getElementById('4a1bdcd0e4d24905952176271494e981'));
-    var option_4a1bdcd0e4d24905952176271494e981 = {
+    var myChart_9fcf29e3679949acaf400c485bf1c6be = echarts.init(document.getElementById('9fcf29e3679949acaf400c485bf1c6be'));
+    var option_9fcf29e3679949acaf400c485bf1c6be = {
     "title": [
         {
-            "text": "thread_count graph",
+            "text": "workloada\ntype :thread_count",
             "subtext": "2020-03-30",
             "left": "auto",
             "top": "auto",
@@ -1154,7 +1154,7 @@ radiusToData:a.prototype.coordToData},o.inherits(n,a),t.exports=n},function(t,e,
             }
         }
     },
-    "_index_flag": 1077663,
+    "_index_flag": 1929173,
     "tooltip": {},
     "series": [
         {
@@ -1200,7 +1200,7 @@ radiusToData:a.prototype.coordToData},o.inherits(n,a),t.exports=n},function(t,e,
             "markLine": {
                 "data": []
             },
-            "indexflag": 1077663
+            "indexflag": 1929173
         }
     ],
     "legend": [
@@ -1284,7 +1284,7 @@ radiusToData:a.prototype.coordToData},o.inherits(n,a),t.exports=n},function(t,e,
         "#f6f5ec"
     ]
 };
-    myChart_4a1bdcd0e4d24905952176271494e981.setOption(option_4a1bdcd0e4d24905952176271494e981);
+    myChart_9fcf29e3679949acaf400c485bf1c6be.setOption(option_9fcf29e3679949acaf400c485bf1c6be);
 </script>
 
 </body>
