--- a/pyecharts/index.html
+++ b/pyecharts/index.html
@@ -966,325 +966,214 @@ radiusToData:a.prototype.coordToData},o.inherits(n,a),t.exports=n},function(t,e,
 </head>
 
 <body>
-<div id="8a9945faf7d1419baa593244b92fa749" style="width:800px;height:400px;"></div>
+<div id="6ab7730141aa497ba541fdbb45178b0f" style="width:800px;height:400px;"></div>
 <script type="text/javascript">
-    var myChart_8a9945faf7d1419baa593244b92fa749 = echarts.init(document.getElementById('8a9945faf7d1419baa593244b92fa749'));
-    var option_8a9945faf7d1419baa593244b92fa749 = {
+    var myChart_6ab7730141aa497ba541fdbb45178b0f = echarts.init(document.getElementById('6ab7730141aa497ba541fdbb45178b0f'));
+    var option_6ab7730141aa497ba541fdbb45178b0f = {
+    "_index_flag": 1497406, 
+    "backgroundColor": "#fff", 
     "title": [
         {
-            "text": "workloada\ntype :opr_count",
-            "subtext": "2020-03-30",
-            "left": "auto",
-            "top": "auto",
             "textStyle": {
-                "color": "#000",
+                "color": "#000", 
                 "fontSize": 18
-            },
+            }, 
+            "subtext": "2020-03-30", 
+            "text": "workloada\ntype :thread_count", 
+            "top": "auto", 
             "subtextStyle": {
-                "color": "#aaa",
+                "color": "#aaa", 
                 "fontSize": 12
+            }, 
+            "left": "auto"
+        }
+    ], 
+    "color": [
+        "#c23531", 
+        "#2f4554", 
+        "#61a0a8", 
+        "#d48265", 
+        "#749f83", 
+        "#ca8622", 
+        "#bda29a", 
+        "#6e7074", 
+        "#546570", 
+        "#c4ccd3", 
+        "#f05b72", 
+        "#ef5b9c", 
+        "#f47920", 
+        "#905a3d", 
+        "#fab27b", 
+        "#2a5caa", 
+        "#444693", 
+        "#726930", 
+        "#b2d235", 
+        "#6d8346", 
+        "#ac6767", 
+        "#1d953f", 
+        "#6950a1", 
+        "#918597", 
+        "#f6f5ec"
+    ], 
+    "series": [
+        {
+            "symbol": "emptyCircle", 
+            "indexflag": 1497406, 
+            "step": false, 
+            "data": [
+                12976.564324829358, 
+                20113.439800474676, 
+                23768.777334093935, 
+                27401.764673644982
+            ], 
+            "stack": "", 
+            "showSymbol": true, 
+            "markLine": {
+                "data": []
+            }, 
+            "name": "Redis", 
+            "type": "line", 
+            "smooth": false, 
+            "label": {
+                "emphasis": {
+                    "show": true
+                }, 
+                "normal": {
+                    "position": "top", 
+                    "textStyle": {
+                        "color": "#000", 
+                        "fontSize": 12
+                    }, 
+                    "formatter": null, 
+                    "show": false
+                }
+            }, 
+            "markPoint": {
+                "data": []
+            }, 
+            "areaStyle": {}, 
+            "lineStyle": {
+                "normal": {
+                    "opacity": 1, 
+                    "width": 1, 
+                    "type": "solid", 
+                    "curveness": 0
+                }
+            }
+        }, 
+        {
+            "symbol": "emptyCircle", 
+            "indexflag": 1497406, 
+            "step": false, 
+            "data": [
+                2353.7719195010004, 
+                4567.377959660917, 
+                5850.7588434219915, 
+                9788.566953797965
+            ], 
+            "stack": "", 
+            "showSymbol": true, 
+            "markLine": {
+                "data": []
+            }, 
+            "name": "AnnaMaster", 
+            "type": "line", 
+            "smooth": false, 
+            "label": {
+                "emphasis": {
+                    "show": true
+                }, 
+                "normal": {
+                    "position": "top", 
+                    "textStyle": {
+                        "color": "#000", 
+                        "fontSize": 12
+                    }, 
+                    "formatter": null, 
+                    "show": false
+                }
+            }, 
+            "markPoint": {
+                "data": []
+            }, 
+            "areaStyle": {}, 
+            "lineStyle": {
+                "normal": {
+                    "opacity": 1, 
+                    "width": 1, 
+                    "type": "solid", 
+                    "curveness": 0
+                }
             }
         }
-    ],
+    ], 
+    "yAxis": [
+        {
+            "nameLocation": "middle", 
+            "name": "", 
+            "min": null, 
+            "max": null, 
+            "axisLabel": {
+                "formatter": "{value} ", 
+                "rotate": 0
+            }, 
+            "nameTextStyle": {
+                "fontSize": 14
+            }, 
+            "nameGap": 25, 
+            "type": "value"
+        }
+    ], 
+    "tooltip": {}, 
+    "xAxis": [
+        {
+            "nameLocation": "middle", 
+            "name": "", 
+            "min": null, 
+            "max": null, 
+            "axisLabel": {
+                "interval": "auto", 
+                "rotate": 0
+            }, 
+            "nameTextStyle": {
+                "fontSize": 14
+            }, 
+            "nameGap": 25, 
+            "type": "category", 
+            "data": [
+                "4", 
+                "8", 
+                "16", 
+                "32"
+            ]
+        }
+    ], 
     "toolbox": {
-        "show": true,
-        "orient": "vertical",
-        "left": "right",
-        "top": "center",
         "feature": {
             "saveAsImage": {
                 "show": true
             }
-        }
-    },
-    "_index_flag": 1994911,
-    "tooltip": {},
-    "series": [
-        {
-            "type": "line",
-            "name": "anna",
-            "symbol": "emptyCircle",
-            "smooth": false,
-            "step": false,
-            "stack": "",
-            "showSymbol": true,
-            "data": [
-                1276.4871074802145
-            ],
-            "label": {
-                "normal": {
-                    "show": false,
-                    "position": "top",
-                    "textStyle": {
-                        "color": "#000",
-                        "fontSize": 12
-                    },
-                    "formatter": null
-                },
-                "emphasis": {
-                    "show": true
-                }
-            },
-            "lineStyle": {
-                "normal": {
-                    "width": 1,
-                    "opacity": 1,
-                    "curveness": 0,
-                    "type": "solid"
-                }
-            },
-            "areaStyle": {},
-            "markPoint": {
-                "data": []
-            },
-            "markLine": {
-                "data": []
-            },
-            "indexflag": 1994911
-        }
-    ],
+        }, 
+        "top": "center", 
+        "left": "right", 
+        "orient": "vertical", 
+        "show": true
+    }, 
     "legend": [
         {
+            "show": true, 
+            "top": "top", 
+            "selectedMode": "multiple", 
             "data": [
-                "anna"
-            ],
-            "selectedMode": "multiple",
-            "show": true,
-            "left": "center",
-            "top": "top",
-            "orient": "horizontal"
+                "Redis", 
+                "AnnaMaster"
+            ], 
+            "orient": "horizontal", 
+            "left": "center"
         }
-    ],
-    "backgroundColor": "#fff",
-    "xAxis": [
-        {
-            "name": "",
-            "nameLocation": "middle",
-            "nameGap": 25,
-            "nameTextStyle": {
-                "fontSize": 14
-            },
-            "axisLabel": {
-                "interval": "auto",
-                "rotate": 0
-            },
-            "min": null,
-            "max": null,
-            "data": [
-                "10000"
-            ],
-            "type": "category"
-        }
-    ],
-    "yAxis": [
-        {
-            "name": "",
-            "nameLocation": "middle",
-            "nameGap": 25,
-            "nameTextStyle": {
-                "fontSize": 14
-            },
-            "axisLabel": {
-                "formatter": "{value} ",
-                "rotate": 0
-            },
-            "min": null,
-            "max": null,
-            "type": "value"
-        }
-    ],
-    "color": [
-        "#c23531",
-        "#2f4554",
-        "#61a0a8",
-        "#d48265",
-        "#749f83",
-        "#ca8622",
-        "#bda29a",
-        "#6e7074",
-        "#546570",
-        "#c4ccd3",
-        "#f05b72",
-        "#ef5b9c",
-        "#f47920",
-        "#905a3d",
-        "#fab27b",
-        "#2a5caa",
-        "#444693",
-        "#726930",
-        "#b2d235",
-        "#6d8346",
-        "#ac6767",
-        "#1d953f",
-        "#6950a1",
-        "#918597",
-        "#f6f5ec"
     ]
 };
-    myChart_8a9945faf7d1419baa593244b92fa749.setOption(option_8a9945faf7d1419baa593244b92fa749);
-</script>
-<div id="9fcf29e3679949acaf400c485bf1c6be" style="width:800px;height:400px;"></div>
-<script type="text/javascript">
-    var myChart_9fcf29e3679949acaf400c485bf1c6be = echarts.init(document.getElementById('9fcf29e3679949acaf400c485bf1c6be'));
-    var option_9fcf29e3679949acaf400c485bf1c6be = {
-    "title": [
-        {
-            "text": "workloada\ntype :thread_count",
-            "subtext": "2020-03-30",
-            "left": "auto",
-            "top": "auto",
-            "textStyle": {
-                "color": "#000",
-                "fontSize": 18
-            },
-            "subtextStyle": {
-                "color": "#aaa",
-                "fontSize": 12
-            }
-        }
-    ],
-    "toolbox": {
-        "show": true,
-        "orient": "vertical",
-        "left": "right",
-        "top": "center",
-        "feature": {
-            "saveAsImage": {
-                "show": true
-            }
-        }
-    },
-    "_index_flag": 1929173,
-    "tooltip": {},
-    "series": [
-        {
-            "type": "line",
-            "name": "anna",
-            "symbol": "emptyCircle",
-            "smooth": false,
-            "step": false,
-            "stack": "",
-            "showSymbol": true,
-            "data": [
-                811.8201006656925,
-                1491.6467780429593,
-                1551.8311607697083,
-                1276.4871074802145
-            ],
-            "label": {
-                "normal": {
-                    "show": false,
-                    "position": "top",
-                    "textStyle": {
-                        "color": "#000",
-                        "fontSize": 12
-                    },
-                    "formatter": null
-                },
-                "emphasis": {
-                    "show": true
-                }
-            },
-            "lineStyle": {
-                "normal": {
-                    "width": 1,
-                    "opacity": 1,
-                    "curveness": 0,
-                    "type": "solid"
-                }
-            },
-            "areaStyle": {},
-            "markPoint": {
-                "data": []
-            },
-            "markLine": {
-                "data": []
-            },
-            "indexflag": 1929173
-        }
-    ],
-    "legend": [
-        {
-            "data": [
-                "anna"
-            ],
-            "selectedMode": "multiple",
-            "show": true,
-            "left": "center",
-            "top": "top",
-            "orient": "horizontal"
-        }
-    ],
-    "backgroundColor": "#fff",
-    "xAxis": [
-        {
-            "name": "",
-            "nameLocation": "middle",
-            "nameGap": 25,
-            "nameTextStyle": {
-                "fontSize": 14
-            },
-            "axisLabel": {
-                "interval": "auto",
-                "rotate": 0
-            },
-            "min": null,
-            "max": null,
-            "data": [
-                "1",
-                "2",
-                "3",
-                "4"
-            ],
-            "type": "category"
-        }
-    ],
-    "yAxis": [
-        {
-            "name": "",
-            "nameLocation": "middle",
-            "nameGap": 25,
-            "nameTextStyle": {
-                "fontSize": 14
-            },
-            "axisLabel": {
-                "formatter": "{value} ",
-                "rotate": 0
-            },
-            "min": null,
-            "max": null,
-            "type": "value"
-        }
-    ],
-    "color": [
-        "#c23531",
-        "#2f4554",
-        "#61a0a8",
-        "#d48265",
-        "#749f83",
-        "#ca8622",
-        "#bda29a",
-        "#6e7074",
-        "#546570",
-        "#c4ccd3",
-        "#f05b72",
-        "#ef5b9c",
-        "#f47920",
-        "#905a3d",
-        "#fab27b",
-        "#2a5caa",
-        "#444693",
-        "#726930",
-        "#b2d235",
-        "#6d8346",
-        "#ac6767",
-        "#1d953f",
-        "#6950a1",
-        "#918597",
-        "#f6f5ec"
-    ]
-};
-    myChart_9fcf29e3679949acaf400c485bf1c6be.setOption(option_9fcf29e3679949acaf400c485bf1c6be);
+    myChart_6ab7730141aa497ba541fdbb45178b0f.setOption(option_6ab7730141aa497ba541fdbb45178b0f);
 </script>
 
 </body>
