add:oop support

--- a/pyecharts/index.html
+++ b/pyecharts/index.html
@@ -966,11 +966,11 @@ radiusToData:a.prototype.coordToData},o.inherits(n,a),t.exports=n},function(t,e,
 </head>
 
 <body>
-<div id="6ab7730141aa497ba541fdbb45178b0f" style="width:800px;height:400px;"></div>
+<div id="5f658dc0a0634537a75b2f9731e5a8f6" style="width:800px;height:400px;"></div>
 <script type="text/javascript">
-    var myChart_6ab7730141aa497ba541fdbb45178b0f = echarts.init(document.getElementById('6ab7730141aa497ba541fdbb45178b0f'));
-    var option_6ab7730141aa497ba541fdbb45178b0f = {
-    "_index_flag": 1497406, 
+    var myChart_5f658dc0a0634537a75b2f9731e5a8f6 = echarts.init(document.getElementById('5f658dc0a0634537a75b2f9731e5a8f6'));
+    var option_5f658dc0a0634537a75b2f9731e5a8f6 = {
+    "_index_flag": 338783, 
     "backgroundColor": "#fff", 
     "title": [
         {
@@ -978,8 +978,8 @@ radiusToData:a.prototype.coordToData},o.inherits(n,a),t.exports=n},function(t,e,
                 "color": "#000", 
                 "fontSize": 18
             }, 
-            "subtext": "2020-03-30", 
-            "text": "workloada\ntype :thread_count", 
+            "subtext": "workloada", 
+            "text": "thread_count", 
             "top": "auto", 
             "subtextStyle": {
                 "color": "#aaa", 
@@ -1018,7 +1018,7 @@ radiusToData:a.prototype.coordToData},o.inherits(n,a),t.exports=n},function(t,e,
     "series": [
         {
             "symbol": "emptyCircle", 
-            "indexflag": 1497406, 
+            "indexflag": 338783, 
             "step": false, 
             "data": [
                 12976.564324829358, 
@@ -1063,7 +1063,7 @@ radiusToData:a.prototype.coordToData},o.inherits(n,a),t.exports=n},function(t,e,
         }, 
         {
             "symbol": "emptyCircle", 
-            "indexflag": 1497406, 
+            "indexflag": 338783, 
             "step": false, 
             "data": [
                 2353.7719195010004, 
@@ -1173,7 +1173,7 @@ radiusToData:a.prototype.coordToData},o.inherits(n,a),t.exports=n},function(t,e,
         }
     ]
 };
-    myChart_6ab7730141aa497ba541fdbb45178b0f.setOption(option_6ab7730141aa497ba541fdbb45178b0f);
+    myChart_5f658dc0a0634537a75b2f9731e5a8f6.setOption(option_5f658dc0a0634537a75b2f9731e5a8f6);
 </script>
 
 </body>
