update:optimize graph pattern

--- a/pyecharts/index.html
+++ b/pyecharts/index.html
@@ -966,214 +966,214 @@ radiusToData:a.prototype.coordToData},o.inherits(n,a),t.exports=n},function(t,e,
 </head>
 
 <body>
-<div id="5f658dc0a0634537a75b2f9731e5a8f6" style="width:800px;height:400px;"></div>
+<div id="97fde2a17fde4b1da95ffffc4976e513" style="width:800px;height:400px;"></div>
 <script type="text/javascript">
-    var myChart_5f658dc0a0634537a75b2f9731e5a8f6 = echarts.init(document.getElementById('5f658dc0a0634537a75b2f9731e5a8f6'));
-    var option_5f658dc0a0634537a75b2f9731e5a8f6 = {
-    "_index_flag": 338783, 
-    "backgroundColor": "#fff", 
+    var myChart_97fde2a17fde4b1da95ffffc4976e513 = echarts.init(document.getElementById('97fde2a17fde4b1da95ffffc4976e513'));
+    var option_97fde2a17fde4b1da95ffffc4976e513 = {
     "title": [
         {
+            "text": "workloada",
+            "subtext": "",
+            "left": "center",
+            "top": "auto",
             "textStyle": {
-                "color": "#000", 
+                "color": "#000",
                 "fontSize": 18
-            }, 
-            "subtext": "workloada", 
-            "text": "thread_count", 
-            "top": "auto", 
+            },
             "subtextStyle": {
-                "color": "#aaa", 
+                "color": "#aaa",
                 "fontSize": 12
-            }, 
-            "left": "auto"
-        }
-    ], 
-    "color": [
-        "#c23531", 
-        "#2f4554", 
-        "#61a0a8", 
-        "#d48265", 
-        "#749f83", 
-        "#ca8622", 
-        "#bda29a", 
-        "#6e7074", 
-        "#546570", 
-        "#c4ccd3", 
-        "#f05b72", 
-        "#ef5b9c", 
-        "#f47920", 
-        "#905a3d", 
-        "#fab27b", 
-        "#2a5caa", 
-        "#444693", 
-        "#726930", 
-        "#b2d235", 
-        "#6d8346", 
-        "#ac6767", 
-        "#1d953f", 
-        "#6950a1", 
-        "#918597", 
-        "#f6f5ec"
-    ], 
-    "series": [
-        {
-            "symbol": "emptyCircle", 
-            "indexflag": 338783, 
-            "step": false, 
-            "data": [
-                12976.564324829358, 
-                20113.439800474676, 
-                23768.777334093935, 
-                27401.764673644982
-            ], 
-            "stack": "", 
-            "showSymbol": true, 
-            "markLine": {
-                "data": []
-            }, 
-            "name": "Redis", 
-            "type": "line", 
-            "smooth": false, 
-            "label": {
-                "emphasis": {
-                    "show": true
-                }, 
-                "normal": {
-                    "position": "top", 
-                    "textStyle": {
-                        "color": "#000", 
-                        "fontSize": 12
-                    }, 
-                    "formatter": null, 
-                    "show": false
-                }
-            }, 
-            "markPoint": {
-                "data": []
-            }, 
-            "areaStyle": {}, 
-            "lineStyle": {
-                "normal": {
-                    "opacity": 1, 
-                    "width": 1, 
-                    "type": "solid", 
-                    "curveness": 0
-                }
-            }
-        }, 
-        {
-            "symbol": "emptyCircle", 
-            "indexflag": 338783, 
-            "step": false, 
-            "data": [
-                2353.7719195010004, 
-                4567.377959660917, 
-                5850.7588434219915, 
-                9788.566953797965
-            ], 
-            "stack": "", 
-            "showSymbol": true, 
-            "markLine": {
-                "data": []
-            }, 
-            "name": "AnnaMaster", 
-            "type": "line", 
-            "smooth": false, 
-            "label": {
-                "emphasis": {
-                    "show": true
-                }, 
-                "normal": {
-                    "position": "top", 
-                    "textStyle": {
-                        "color": "#000", 
-                        "fontSize": 12
-                    }, 
-                    "formatter": null, 
-                    "show": false
-                }
-            }, 
-            "markPoint": {
-                "data": []
-            }, 
-            "areaStyle": {}, 
-            "lineStyle": {
-                "normal": {
-                    "opacity": 1, 
-                    "width": 1, 
-                    "type": "solid", 
-                    "curveness": 0
-                }
             }
         }
-    ], 
-    "yAxis": [
-        {
-            "nameLocation": "middle", 
-            "name": "", 
-            "min": null, 
-            "max": null, 
-            "axisLabel": {
-                "formatter": "{value} ", 
-                "rotate": 0
-            }, 
-            "nameTextStyle": {
-                "fontSize": 14
-            }, 
-            "nameGap": 25, 
-            "type": "value"
-        }
-    ], 
-    "tooltip": {}, 
-    "xAxis": [
-        {
-            "nameLocation": "middle", 
-            "name": "", 
-            "min": null, 
-            "max": null, 
-            "axisLabel": {
-                "interval": "auto", 
-                "rotate": 0
-            }, 
-            "nameTextStyle": {
-                "fontSize": 14
-            }, 
-            "nameGap": 25, 
-            "type": "category", 
-            "data": [
-                "4", 
-                "8", 
-                "16", 
-                "32"
-            ]
-        }
-    ], 
+    ],
     "toolbox": {
+        "show": true,
+        "orient": "vertical",
+        "left": "right",
+        "top": "center",
         "feature": {
             "saveAsImage": {
                 "show": true
             }
-        }, 
-        "top": "center", 
-        "left": "right", 
-        "orient": "vertical", 
-        "show": true
-    }, 
+        }
+    },
+    "_index_flag": 115785,
+    "tooltip": {},
+    "series": [
+        {
+            "type": "line",
+            "name": "Redis",
+            "symbol": "emptyCircle",
+            "smooth": false,
+            "step": false,
+            "stack": "",
+            "showSymbol": true,
+            "data": [
+                12976.564324829358,
+                20113.439800474676,
+                23768.777334093935,
+                27401.764673644982
+            ],
+            "label": {
+                "normal": {
+                    "show": false,
+                    "position": "top",
+                    "textStyle": {
+                        "color": "#000",
+                        "fontSize": 12
+                    },
+                    "formatter": null
+                },
+                "emphasis": {
+                    "show": true
+                }
+            },
+            "lineStyle": {
+                "normal": {
+                    "width": 1,
+                    "opacity": 1,
+                    "curveness": 0,
+                    "type": "solid"
+                }
+            },
+            "areaStyle": {},
+            "markPoint": {
+                "data": []
+            },
+            "markLine": {
+                "data": []
+            },
+            "indexflag": 115785
+        },
+        {
+            "type": "line",
+            "name": "AnnaMaster",
+            "symbol": "emptyCircle",
+            "smooth": false,
+            "step": false,
+            "stack": "",
+            "showSymbol": true,
+            "data": [
+                2353.7719195010004,
+                4567.377959660917,
+                5850.7588434219915,
+                9788.566953797965
+            ],
+            "label": {
+                "normal": {
+                    "show": false,
+                    "position": "top",
+                    "textStyle": {
+                        "color": "#000",
+                        "fontSize": 12
+                    },
+                    "formatter": null
+                },
+                "emphasis": {
+                    "show": true
+                }
+            },
+            "lineStyle": {
+                "normal": {
+                    "width": 1,
+                    "opacity": 1,
+                    "curveness": 0,
+                    "type": "solid"
+                }
+            },
+            "areaStyle": {},
+            "markPoint": {
+                "data": []
+            },
+            "markLine": {
+                "data": []
+            },
+            "indexflag": 115785
+        }
+    ],
     "legend": [
         {
-            "show": true, 
-            "top": "top", 
-            "selectedMode": "multiple", 
             "data": [
-                "Redis", 
+                "Redis",
                 "AnnaMaster"
-            ], 
-            "orient": "horizontal", 
-            "left": "center"
+            ],
+            "selectedMode": "multiple",
+            "show": true,
+            "left": "right",
+            "top": "top",
+            "orient": "vertical"
         }
+    ],
+    "backgroundColor": "#fff",
+    "xAxis": [
+        {
+            "name": "thread_count",
+            "nameLocation": "middle",
+            "nameGap": 25,
+            "nameTextStyle": {
+                "fontSize": 14
+            },
+            "axisLabel": {
+                "interval": "auto",
+                "rotate": 0
+            },
+            "min": null,
+            "max": null,
+            "data": [
+                "4",
+                "8",
+                "16",
+                "32"
+            ],
+            "type": "category"
+        }
+    ],
+    "yAxis": [
+        {
+            "name": "Throughput(ops/sec)",
+            "nameLocation": "end",
+            "nameGap": 25,
+            "nameTextStyle": {
+                "fontSize": 14
+            },
+            "axisLabel": {
+                "formatter": "{value} ",
+                "rotate": 0
+            },
+            "min": null,
+            "max": null,
+            "type": "value"
+        }
+    ],
+    "color": [
+        "#c23531",
+        "#2f4554",
+        "#61a0a8",
+        "#d48265",
+        "#749f83",
+        "#ca8622",
+        "#bda29a",
+        "#6e7074",
+        "#546570",
+        "#c4ccd3",
+        "#f05b72",
+        "#ef5b9c",
+        "#f47920",
+        "#905a3d",
+        "#fab27b",
+        "#2a5caa",
+        "#444693",
+        "#726930",
+        "#b2d235",
+        "#6d8346",
+        "#ac6767",
+        "#1d953f",
+        "#6950a1",
+        "#918597",
+        "#f6f5ec"
     ]
 };
-    myChart_5f658dc0a0634537a75b2f9731e5a8f6.setOption(option_5f658dc0a0634537a75b2f9731e5a8f6);
+    myChart_97fde2a17fde4b1da95ffffc4976e513.setOption(option_97fde2a17fde4b1da95ffffc4976e513);
 </script>
 
 </body>
